fix: remove global third form-group spacing rule

--- a/src/pages/Register.css
+++ b/src/pages/Register.css
@@ -78,11 +78,6 @@
   margin-bottom: 16px;
 }
 
-.form-group:nth-of-type(3) {
-  margin-top: auto;
-  padding-top: 100px;
-}
-
 .form-group label {
   display: none;
 }
